--- a/hosteria/src/App.css
+++ b/hosteria/src/App.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  
   padding: 0;
   box-sizing: border-box;
 }
@@ -155,6 +155,138 @@ h6 {
   }
 }
 /* end of navbar */
+.icon-transition{
+  font-size: 1.5rem;
+  color: #ffffff ;
+}
+.cid-qJ3OvXSQuM {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #af9a7d;
+}
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.cid-qJ3OwtSWji {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+.align-center {
+  text-align: center;
+}
+.col-12 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  padding-top: 30px;
+  max-width: 100%;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.display-7 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.9rem;
+}
+section {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (min-width: 992px){
+.container {
+    max-width: 960px;
+}
+}
+.mbr-white {
+  color: #ffffff;
+}
+.cid-qJ3OvXSQuM .icons-wrapper ul li {
+  margin-right: 1.25rem;
+  display: inline-block;
+}
+@media (min-width: 992px) {
+.col-lg-4 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
+}
+.mbr-lighter {
+  font-weight: 100 !important;
+}
+.mbr-section-subtitle {
+  letter-spacing: 2px;
+  margin: 0;
+  line-height: 1.3;
+}
+.display-4 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.85rem;
+}
+.mbr-section-title {
+  letter-spacing: 1px;
+  margin: 0;
+  font-style: normal;
+  line-height: 1.2;
+}
+.display-5 {
+  font-family: 'Gilda Display', serif;
+  font-size: 1.9rem;
+}
+.pb-2, .py-2 {
+  padding-bottom: .5rem!important;
+}
+.cid-qJ3OvXSQuM .first-column .mbr-text {
+  margin: 0;
+}
+.mbr-text {
+  letter-spacing: 1px;
+}
+.cid-qJ3OvXSQuM .mbr-section-subtitle {
+  letter-spacing: 1px;
+  margin-bottom: 1.5rem;
+  color: #e4e4e4;
+}
+.mbr-lighter {
+  font-weight: 100 !important;
+}
+.mbr-section-subtitle {
+  letter-spacing: 2px;
+  margin: 0;
+}
+.mbr-section-subtitle {
+  line-height: 1.3;
+}
+section, .container, .container-fluid {
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -305px;
+  margin-left: 305px;
+}
+.justify-content-center {
+  -webkit-box-pack: center!important;
+  -ms-flex-pack: center!important;
+  justify-content: center!important;
+}
 /* Hero */
 .defaultHero,
 .roomsHero {
@@ -166,6 +298,17 @@ h6 {
 }
 .roomsHero {
   background-image: url("./images/room-2.jpeg");
+  min-height: 60vh;
+}
+.contactanosHero {
+  min-height: calc(100vh - 66px);
+  background: url("./images/defaultBcg.jpeg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contactanosHero {
+  background-image: url("./images/room-3.jpeg");
   min-height: 60vh;
 }
 /* End of Hero */
@@ -212,7 +355,7 @@ h6 {
 /* Title */
 .section-title {
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 7rem;
 }
 .section-title h4 {
   font-size: 2rem;
@@ -228,6 +371,28 @@ h6 {
 }
 /* end of Title */
 
+/* footer*/
+.section-footer {
+  background-color:var(--primaryColor);
+  position: absolute;
+  width: 100%;
+  height: 500px;
+  color:white;
+  
+}
+.section-footer h4 {
+  font-size: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+.section-footer div {
+  width: 17em;
+  height: 8px;
+  margin: 0 auto;
+  
+}
+/* end of Title */
 /* services */
 .services {
   padding: 5rem 0;
